web/html/src/branding/css/uyuni/header.less
.header-content {
  display: flex;
  align-items: center;
  padding: 0 !important;
}

.navbar-header {
  margin-right: auto !important;
}

.navbar-utility {
  order: 1;
  display: flex !important;
  align-items: center;

  &:before,
  &:after {
    content: none !important;
  }
}

.navbar-primary {
  display: flex !important;
  align-items: center;
  gap: 4px;

  &:before,
  &:after {
    content: none !important;
  }
}

#ssm-box {
  margin-top: 1px;
  margin-bottom: -1px;
}

